--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "bugs": "https://github.com/zerK4/diapi-pluto/issues",
   "author": "Sebastian Pavel <sebastian.v.pavel@gmail.com  >",
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "json-to-ts": "^2.1.0"
   }
 }
