--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "diapio",
   "module": "index.ts",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -9,8 +9,13 @@
     "build": "bun run build.mjs",
     "build:pre": "bun run build"
   },
-  "files": ["dist"],
-  "keywords": ["bun", "api"],
+  "files": [
+    "dist"
+  ],
+  "keywords": [
+    "bun",
+    "api"
+  ],
   "devDependencies": {
     "@types/bun": "latest",
     "bun-plugin-dts": "^0.2.3",
